# vabbuo

./: .gitignore  AGENTS.md  AccessLogger.php  Cargo.toml  DBstructureDump.sql  DESCRIPTION.md  Dockerfile  Mobile_Detect.php  OSC.js  README.md  REFACTOR.md  accessLogger.php  fallingSentence.js  fallingSentenceManager.js  formatting.css  index.php  login.php  main.html  main.php  mainButton.js  mobileStart.html  rainbow.js  sentence.js  sentence.php  sentenceManager.js  start.html  staticSentence.js  staticSentenceManager.js  submitSentence.php  timeUpdate.js  utilities.js
src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs
static/: app.css  landing.html  landing.js  main.html  main.js  sentence-engine.js
