[package]
name = "vabbuo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["fs"] }

